[tool.poetry]
name = "yolo-dl"
version = "0.1.0"
description = ""
authors = ["Aryan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ultralytics = "^8.1.19"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
